--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -74,7 +74,7 @@ transplante de órgãos contaminados.
 Com menos frequência, o vírus pode ser transmitido em relação sexual e transmissão vertical. Para se prevenir da hepatite C, é importante realizar o controle do sangue e órgãos que serão doados e uso de materiais descartáveis.<br><a href="https://www.google.com/amp/s/m.brasilescola.uol.com.br/amp/doencas/hepatite.htm"class="sb_mais">Saiba Mais</a></div>
 		</h1>
 		<h1 id="v_Text">
-			<div onclick="mostrar('herp')">Herpes Genital</div>
+			<div onclick="mostrar('herpe')">Herpes Genital</div>
 			<div id="herpe" class="none res">
 				O herpes genital, ou herpes tipo 2, é uma doença sexualmente transmissível causada pelo Herpes simplex vírus do tipo 2, principalmente, ou tipo 1. Caracteriza-se por meio de pequenas e dolorosas lesões na pele e mucosa desta região, que desaparecem espontaneamente cerca de uma semana após seu surgimento. Cerca de 80% das pessoas infectadas não apresentam sintomas, mas podem transmitir a doença.
 
