--- a/static/css/bac.css
+++ b/static/css/bac.css
@@ -29,6 +29,12 @@
   color:white;
   padding:10px;
 }
+.pres{
+  font-size: 1.35em;
+  background-color: red;
+  color:white;
+  padding:10px;
+}
 }
 @media (min-width: 521px) and (max-width: 9999px){
 #Bacterias{
