--- a/static/css/bac.css
+++ b/static/css/bac.css
@@ -67,4 +67,10 @@
   color:white;
   padding:20px;
 }
+.pres{
+  font-size: 2.5rem;
+  background-color: red;
+  color:white;
+  padding:20px;
+}
 }
